<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.vb4.savour.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.vb4.savour.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_weekly_plan"
        android:name="com.vb4.savour.ui.weeklyplan.WeeklyPlanFragment"
        android:label="@string/title_weekly_plan"
        tools:layout="@layout/fragment_weekly_plan" />

    <fragment
        android:id="@+id/navigation_grocery_list"
        android:name="com.vb4.savour.ui.grocerylist.GroceryListFragment"
        android:label="@string/title_grocery_list"
        tools:layout="@layout/fragment_grocery_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.vb4.savour.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_logout"
            app:destination="@id/navigation_login"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.vb4.savour.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_discover"
            app:destination="@id/navigation_discover"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>