<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.search.SearchFragment">


    <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@id/searchRelativeLayout"
       android:layout_alignParentTop="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true">

       <Button
           android:id="@id/breakfast_button"
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_alignParentLeft="true"
           android:layout_centerInParent="true"
           android:background="@drawable/category_background"
           android:backgroundTint="#000000"
           android:text="@string/breakfast_category_button" />

       <Button
           android:id="@id/lunch_button"
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_centerInParent="true"
           android:background="@drawable/category_background"
           android:backgroundTint="#000000"
           android:text="@string/lunch_category_button" />

       <Button
           android:id="@id/dinner_button"
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:layout_alignParentTop="true"
           android:layout_alignParentRight="true"
           android:background="@drawable/category_background"
           android:text="@string/dinner_category_button" />

       <Button
           android:id="@id/drink_button"
           android:layout_below="@id/breakfast_button"
           android:layout_width="120dp"
           android:layout_marginTop="10dp"
           android:layout_height="wrap_content"
           android:background="@drawable/category_background"
           android:text="@string/drinks_category_button" />

       <Button
           android:id="@id/snacks_button"
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:background="@drawable/category_background"
           android:layout_centerInParent="true"
           android:layout_below="@id/lunch_button"
           android:backgroundTint="#000000"
           android:text="@string/snacks_category_button" />

       <Button
           android:id="@id/dessert_button"
           android:layout_width="120dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_alignParentRight="true"
           android:layout_below="@id/dinner_button"
           android:background="@drawable/category_background"
           android:text="@string/dessert_category_button" />

   </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:paddingBottom="?attr/actionBarSize"/>

</LinearLayout>



