<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.weeklyplan.WeeklyPlanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/edit_weekly_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_weekly_plan"
            android:textSize="10pt"
            android:textAlignment="center"
            android:layout_marginVertical="2dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/edit_description_weekly_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_description_weekly_plan"
            android:textSize="8pt"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast_weekly_plan_label"
                android:textSize="8pt"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch_weekly_plan_label"
                android:textSize="8pt"
                android:layout_marginHorizontal="23dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner_weekly_plan_label"
                android:textSize="8pt"
                android:layout_marginHorizontal="24dp"
                />

        </LinearLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_weekly_plan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?attr/actionBarSize"/>
</LinearLayout>